# NoSAL

./: CMakeLists.txt  README.md
cmake/: install-rules.cmake  variables.cmake
include/: sal.h
